k8s/geoquery/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocketnow-geoquery
  labels:
    app: kust
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: kust
  template:
    metadata:
      labels:
        app: kust
    spec:
      containers:
        - name: pocketnow-geoquery
          image: registry.hub.docker.com/clarkezone/pocketnow:dotnet8-manual-arm64
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
