k8s/geoquery/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocketnow-geoquery-service
spec:
  selector:
    app: kust
  ports:
    - name: "http"
      port: 5000
