k8s/geoquery/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pocketnowquery
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - "geoquery"
  rules:
    - http:
        paths:
          - backend:
              service:
                name: pocketnow-geoquery-service
                port:
                  number: 5000
            path: /
            pathType: Prefix
